# BOCS

./: README.md
custom-lammps/: README  custom_changes.txt
custom-lammps/examples/peptide/: .in.peptide.swp
custom-lammps/src/: compute.h  compute_msd.h  compute_pressure.cpp  compute_pressure.h  fix_nh.cpp  fix_nh.h  output.h  style_atom.h  style_command.h  style_compute.h  style_dump.h  style_fix.h  style_kspace.h  style_pair.h  thermo.cpp  thermo.h  verlet.cpp
custom-lammps/src/MAKE/: Makefile.lionxmkl  Makefile.mesabi  Makefile.openmpi  Makefile.serial
custom-lammps/src/Obj_lionx/: Makefile  Makefile.package  angle.d  angle_charmm.d  angle_charmm_omp.d  angle_cosine.d  angle_cosine_delta.d  angle_cosine_delta_omp.d  angle_cosine_omp.d  angle_cosine_periodic.d  angle_cosine_periodic_omp.d  angle_cosine_squared.d  angle_cosine_squared_omp.d  angle_harmonic.d  angle_harmonic_omp.d  angle_hybrid.d  angle_table.d  angle_table_omp.d  atom.d  atom_map.d  atom_vec.d  atom_vec_angle.d  atom_vec_atomic.d  atom_vec_body.d  atom_vec_bond.d  atom_vec_charge.d  atom_vec_ellipsoid.d  atom_vec_full.d  atom_vec_hybrid.d  atom_vec_line.d  atom_vec_molecular.d  atom_vec_sphere.d  atom_vec_tri.d  balance.d  body.d  bond.d  bond_fene.d  bond_fene_expand.d  bond_fene_expand_omp.d  bond_fene_omp.d  (+401 more)
dependencies/: README
force-matching/: CMakeLists.txt  README  contributors.txt
force-matching/scripts/: translate_table.py  translate_top.py  translate_top_fn.py
force-matching/src/: CMakeLists.txt  calc_grids.c  calc_grids.h  calc_ref_potential.c  calc_ref_potential.h  cgff.c  cgff.c~  cgff_fn.c  cgff_fn.h  cgff_types.h  cgmap.c  cgmap_legacy.c  gmx-interface-var.h  gmx-interface.h  gmx-interface_45.c  gmx-interface_46.c  gmx-interface_50.c  gmx-interface_51.c  gmx_version.c  gromacs_topology.c  gromacs_topology.h  io_output.c  io_output.h  io_read.c  io_read.h  read_map.c  read_map.h  read_parameters.c  read_parameters.h  safe_mem.c  safe_mem.h  solv_lin_eqns.c  solv_lin_eqns.h  table_functions.c  table_functions.h  table_types.h  tables.c  transf_map.c  transf_map.h  translator.c  (+2 more)
force-matching/tutorials/1-site_methanol/aa_simulation/: methanol.mdp  methanol.top  methanol_oplsaa.itp
force-matching/tutorials/1-site_methanol/cg_sim/: cg_methanol.gro  cg_methanol.mdp  cg_methanol.top
force-matching/tutorials/1-site_methanol/coarse_graining/: par.txt
force-matching/tutorials/heptol_xn/aa_simulations/1_1_heptol/: 1_1_HEP_TOL.gro
force-matching/tutorials/heptol_xn/aa_simulations/1_4_heptol/: 1_4_HEP_TOL.mdp
force-matching/tutorials/heptol_xn/aa_simulations/4_1_heptol/: 4_1_HEP_TOL.gro
force-matching/tutorials/heptol_xn/coarse_graining/1_1_heptol/: cg.1_1_HEP_TOL.top  par.txt
force-matching/tutorials/heptol_xn/coarse_graining/1_4_heptol/: cg.1_4_HEP_TOL.gro  inp.txt  map.1_4_HEP_TOL.top  par.txt
force-matching/tutorials/heptol_xn/coarse_graining/2_3_heptol/: cg.2_3_HEP_TOL.gro  cg.2_3_HEP_TOL.top  map.2_3_HEP_TOL.top
force-matching/tutorials/heptol_xn/coarse_graining/3_2_heptol/: inp.txt  map.3_2_HEP_TOL.top
force-matching/tutorials/heptol_xn/coarse_graining/4_1_heptol/: cg.4_1_HEP_TOL.gro  cg.4_1_HEP_TOL.top  map.4_1_HEP_TOL.top
force-matching/tutorials/heptol_xn/coarse_graining/extended_ensemble/: inp.txt
force-matching/tutorials/heptol_xn/pressure_matching/iteration_one/test_sim/: cgheptol.lmp
force-matching/tutorials/heptol_xn/pressure_matching/iteration_zero/: config.ini
force-matching/tutorials/heptol_xn/pressure_matching/iteration_zero/test_sim/: data.cgheptol
force-matching/tutorials/heptol_xn/pressure_matching/rerun/: cg.rerun.1_1_HEP_TOL.gro  cg.rerun.1_1_HEP_TOL.mdp  cg.rerun.1_1_HEP_TOL.ndx  cg.rerun.1_1_HEP_TOL.top
force-matching/tutorials/lj_recovery/: LJ.ndx  inp.txt  par.txt
force-matching/tutorials/lj_recovery/results/: out.total.txt  summarize_input.txt
pressure-matching/: CMakeLists.txt  README
pressure-matching/src/: CMakeLists.txt  basis.c  basis.h  distro.c  distro.h  io.c  io.h  plot_basis.c  pressure_matching.c  pressure_matching_fn.c  pressure_matching_fn.h  pressure_matching_types.h  safe_mem.c  safe_mem.h  solv_lin_eqns.c  solv_lin_eqns.h
tutorials/1-site_methanol/aa_simulation/: methanol.5.1.4.mdp  methanol.gro  methanol.top
tutorials/1-site_methanol/cg_sim/: cg_methanol.4.5.3.mdp  cg_methanol.5.1.4.mdp  cg_methanol.ndx  cg_methanol.top
tutorials/1-site_methanol/coarse_graining/: cg_methanol.4.5.3.mdp  cg_methanol.5.1.4.mdp  cg_methanol.gro  cg_methanol.mdp  cg_methanol.top  inp.txt  map.methanol.top  par.txt
tutorials/heptol_xn/aa_simulations/1_1_heptol/: 1_1_HEP_TOL.top
tutorials/heptol_xn/aa_simulations/1_4_heptol/: 1_4_HEP_TOL.gro  1_4_HEP_TOL.top
tutorials/heptol_xn/aa_simulations/2_3_heptol/: 2_3_HEP_TOL.gro  2_3_HEP_TOL.mdp  2_3_HEP_TOL.top  toluene.itp
tutorials/heptol_xn/aa_simulations/3_2_heptol/: 3_2_HEP_TOL.gro  3_2_HEP_TOL.mdp  3_2_HEP_TOL.top
tutorials/heptol_xn/aa_simulations/4_1_heptol/: 4_1_HEP_TOL.top  heptane.itp
tutorials/heptol_xn/coarse_graining/1_1_heptol/: cg.1_1_HEP_TOL.ndx  inp.txt  map.1_1_HEP_TOL.top  par.txt
tutorials/heptol_xn/coarse_graining/1_4_heptol/: cg.1_4_HEP_TOL.mdp  cg.1_4_HEP_TOL.ndx  cg.1_4_HEP_TOL.top  map.1_4_HEP_TOL.top  par.txt
tutorials/heptol_xn/coarse_graining/2_3_heptol/: cg.2_3_HEP_TOL.ndx  inp.txt  map.2_3_HEP_TOL.top  par.txt
tutorials/heptol_xn/coarse_graining/3_2_heptol/: cg.3_2_HEP_TOL.gro  cg.3_2_HEP_TOL.ndx  cg.3_2_HEP_TOL.top  map.3_2_HEP_TOL.top  par.txt
tutorials/heptol_xn/coarse_graining/4_1_heptol/: cg.4_1_HEP_TOL.ndx  inp.txt  map.4_1_HEP_TOL.top  par.txt
tutorials/heptol_xn/coarse_graining/extended_ensemble/: lammps_tables.sh  make_gmx_table.sh  par.txt
tutorials/heptol_xn/pressure_matching/iteration_one/: config.ini
tutorials/lj_recovery/: LJ.btp  LJ.gro  LJ.mdp  LJ.top  inp.txt  par.txt
tutorials/lj_recovery/results/: out.total.txt  summarize_input.txt
